apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'
apply plugin: 'kotlin-android-extensions'
apply plugin: 'kotlin-kapt'
apply plugin: 'com.google.gms.google-services'
apply plugin: 'com.google.firebase.crashlytics'

//ext.anko_version='0.10.8'
android {
    compileSdkVersion 30
    packagingOptions {
        exclude 'META-INF/DEPENDENCIES'
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/LICENSE.txt'
        exclude 'META-INF/license.txt'
        exclude 'META-INF/NOTICE'
        exclude 'META-INF/NOTICE.txt'
        exclude 'META-INF/notice.txt'
        exclude 'META-INF/ASL2.0'
        exclude 'META-INF/INDEX.LIST'
        exclude("META-INF/*.kotlin_module")
    }
    buildToolsVersion "30.0.2"
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    // For Kotlin projects
    kotlinOptions {
        jvmTarget = "1.8"
    }
    defaultConfig {
        applicationId "com.example.customeprintservice"
        minSdkVersion 21
        targetSdkVersion 30
        versionCode 1
        versionName "1.0"
        archivesBaseName = "IPP Print Demo"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        multiDexEnabled true
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
}
repositories {
    mavenCentral()
    maven { url "https://repository.aspose.com/repo/" }
}
dependencies {
    implementation fileTree(dir: "libs", include: ["*.jar"])
    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
    implementation 'androidx.core:core-ktx:1.3.2'
    implementation 'androidx.appcompat:appcompat:1.2.0'
    //noinspection GradleCompatible
    implementation 'com.android.support:appcompat-v7:23.1.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
    implementation 'androidx.annotation:annotation:1.1.0'
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    testImplementation 'junit:junit:4.12'
    implementation 'com.hp.jipp:jipp-core:0.7.6'
    implementation 'com.hp.jipp:jipp-pdl:0.7.6'
    implementation 'org.jmdns:jmdns:3.5.5'
    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
    // https://mvnrepository.com/artifact/com.google.guava/guava
    implementation group: 'com.google.guava', name: 'guava', version: '29.0-android'

    //noinspection DuplicatePlatformClasses
    implementation 'commons-logging:commons-logging:1.2'

    //kotlin anko
    implementation 'org.jetbrains.anko:anko-common:0.9'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha06'
    implementation 'androidx.appcompat:appcompat:1.3.0-alpha02'
    implementation 'com.github.florent37:runtime-permission-kotlin:1.1.0'
    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
    implementation 'com.android.support:multidex:1.0.3'

    implementation 'com.budiyev.android:code-scanner:2.1.0'
    implementation 'com.github.tbruyelle:rxpermissions:0.10.2'

    //material design
    implementation 'com.google.android.material:material:1.3.0-alpha03'

    //retrofit dependencies
    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'

    //room library
    def room_version = "2.2.5"
    implementation "androidx.room:room-runtime:$room_version"
    implementation 'android.arch.lifecycle:extensions:1.1.1'
    //noinspection LifecycleAnnotationProcessorWithJava8
    annotationProcessor 'android.arch.lifecycle:compiler:1.1.1'
    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
    kapt "androidx.room:room-compiler:$room_version"
    // For Kotlin use kapt instead of annotationProcessor
    implementation "androidx.room:room-rxjava2:$room_version"

    //firebase Crashlytics dependencies
    implementation platform('com.google.firebase:firebase-bom:25.12.0')
    implementation 'com.google.firebase:firebase-crashlytics-ktx'
    implementation 'com.google.firebase:firebase-analytics-ktx'

    //decode Jwt Token
    implementation 'com.auth0.android:jwtdecode:1.1.1'
    //map Json to Pojo class
    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.8.8'
    //it helps to  remove error of duplication of Kclass kotlin
    implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.10"
    //retrofit logging dependency
    implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
    //xml parsing dependency
    implementation "com.squareup.retrofit2:converter-simplexml:2.4.0"
    //HTML parsing dependency
    implementation 'org.jsoup:jsoup:1.10.2'

    implementation 'com.android.support:multidex:2.0.0'
    implementation (group: 'com.aspose', name: 'aspose-words', version: '20.6', classifier: 'android.via.java')

//    implementation "fr.opensagres.xdocreport:fr.opensagres.poi.xwpf.converter.pdf:2.0.1"
//    implementation "com.github.SUPERCILEX.poi-android:poi:3.17"
//    implementation group: 'fr.opensagres.xdocreport', name: 'fr.opensagres.poi.xwpf.converter.core', version: '2.0.2'
}